// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Header component rendering render Header being logged in english 1`] = `
<div>
  <div>
    <div
      class="CookieConsent"
      style="align-items: baseline; background: rgb(43, 55, 59); color: white; display: flex; flex-wrap: wrap; justify-content: space-between; left: 0px; position: fixed; width: 100%; z-index: 999; height: 13%; text-align: justify; bottom: 0px;"
    >
      <div
        class=""
        style="flex: 1 0 300px; margin: 15px;"
      >
        We use cookies and similar technologies ("cookies") to provide and secure our websites, as well as to analyze the usage of our websites, in order to offer you a great user experience.
        <br />
        To learn more about our use of cookies see our Data Collect information.
        <br />
        Select "I accept" to consent to this use, "I decline" to reject this use, or "More info" to control our cookies' use.
        <a
          href="/DataInformations"
        >
          <button
            class="btn btn-primary more-info"
          >
            More info
          </button>
        </a>
      </div>
      <div
        class=""
      >
        <button
          class=""
          id="rcc-decline-button"
          style="background: rgb(193, 42, 42); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(229, 57, 53);"
        >
          I decline
        </button>
        <button
          class=""
          id="rcc-confirm-button"
          style="background: rgb(255, 212, 45); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(39, 174, 96);"
        >
          I accept
        </button>
      </div>
    </div>
    <nav
      class="navbar navbar-expand-sm uber-color navbar navbar-expand-md navbar-light"
    >
      <img
        alt="logo"
        height="70"
        src="Uberschutz-Icon.png"
        width="65"
      />
      <a
        class="navbar-brand uber-color button-footer navbar-brand"
        href="/"
      >
        <img
          alt="typo"
          src="Überschutz-typo-resize.png"
        />
      </a>
      <div
        class="collapse navbar-collapse collapse show navbar-collapse"
      >
        <ul
          class="ml-auto navbar  navbar-expand-md navbar-nav"
        >
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/"
            >
              Menu
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Connection"
            >
              Connection
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Contact+FAQ"
            >
              Contact + FAQ
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Subscription"
            >
              Subscription
            </a>
          </li>
        </ul>
      </div>
      <div
        class="btn-group btn-group-sm"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          type="button"
        >
          <img
            alt="english"
            class="clickable-flag"
            height="33"
            src="icons8-grande-bretagne-48.png"
            width="35"
          />
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <img
              alt="french"
              class="clickable-flag touched"
              data-lang="fr"
              height="35"
              src="icons8-france-96.png"
              width="35"
            />
          </div>
          <div>
            <img
              alt="english"
              class="clickable-flag"
              data-lang="en"
              height="33"
              src="icons8-grande-bretagne-48.png"
              width="35"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Testing the Header component rendering render Header being logged in french 1`] = `
<div>
  <div>
    <div
      class="CookieConsent"
      style="align-items: baseline; background: rgb(43, 55, 59); color: white; display: flex; flex-wrap: wrap; justify-content: space-between; left: 0px; position: fixed; width: 100%; z-index: 999; height: 13%; text-align: justify; bottom: 0px;"
    >
      <div
        class=""
        style="flex: 1 0 300px; margin: 15px;"
      >
        We use cookies and similar technologies ("cookies") to provide and secure our websites, as well as to analyze the usage of our websites, in order to offer you a great user experience.
        <br />
        To learn more about our use of cookies see our Data Collect information.
        <br />
        Select "I accept" to consent to this use, "I decline" to reject this use, or "More info" to control our cookies' use.
        <a
          href="/DataInformations"
        >
          <button
            class="btn btn-primary more-info"
          >
            More info
          </button>
        </a>
      </div>
      <div
        class=""
      >
        <button
          class=""
          id="rcc-decline-button"
          style="background: rgb(193, 42, 42); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(229, 57, 53);"
        >
          I decline
        </button>
        <button
          class=""
          id="rcc-confirm-button"
          style="background: rgb(255, 212, 45); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(39, 174, 96);"
        >
          I accept
        </button>
      </div>
    </div>
    <nav
      class="navbar navbar-expand-sm uber-color navbar navbar-expand-md navbar-light"
    >
      <img
        alt="logo"
        height="70"
        src="Uberschutz-Icon.png"
        width="65"
      />
      <a
        class="navbar-brand uber-color button-footer navbar-brand"
        href="/"
      >
        <img
          alt="typo"
          src="Überschutz-typo-resize.png"
        />
      </a>
      <div
        class="collapse navbar-collapse collapse show navbar-collapse"
      >
        <ul
          class="ml-auto navbar  navbar-expand-md navbar-nav"
        >
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/"
            >
              Menu
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Connection"
            >
              Connexion
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Contact+FAQ"
            >
              Contact + FAQ
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Subscription"
            >
              Abonnements
            </a>
          </li>
        </ul>
      </div>
      <div
        class="btn-group btn-group-sm"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          type="button"
        >
          <img
            alt="french"
            class="clickable-flag touched"
            height="35"
            src="icons8-france-96.png"
            width="35"
          />
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <img
              alt="french"
              class="clickable-flag touched"
              data-lang="fr"
              height="35"
              src="icons8-france-96.png"
              width="35"
            />
          </div>
          <div>
            <img
              alt="english"
              class="clickable-flag"
              data-lang="en"
              height="33"
              src="icons8-grande-bretagne-48.png"
              width="35"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Testing the Header component rendering render Header not being logged in english 1`] = `
<div>
  <div>
    <div
      class="CookieConsent"
      style="align-items: baseline; background: rgb(43, 55, 59); color: white; display: flex; flex-wrap: wrap; justify-content: space-between; left: 0px; position: fixed; width: 100%; z-index: 999; height: 13%; text-align: justify; bottom: 0px;"
    >
      <div
        class=""
        style="flex: 1 0 300px; margin: 15px;"
      >
        We use cookies and similar technologies ("cookies") to provide and secure our websites, as well as to analyze the usage of our websites, in order to offer you a great user experience.
        <br />
        To learn more about our use of cookies see our Data Collect information.
        <br />
        Select "I accept" to consent to this use, "I decline" to reject this use, or "More info" to control our cookies' use.
        <a
          href="/DataInformations"
        >
          <button
            class="btn btn-primary more-info"
          >
            More info
          </button>
        </a>
      </div>
      <div
        class=""
      >
        <button
          class=""
          id="rcc-decline-button"
          style="background: rgb(193, 42, 42); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(229, 57, 53);"
        >
          I decline
        </button>
        <button
          class=""
          id="rcc-confirm-button"
          style="background: rgb(255, 212, 45); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(39, 174, 96);"
        >
          I accept
        </button>
      </div>
    </div>
    <nav
      class="navbar navbar-expand-sm uber-color navbar navbar-expand-md navbar-light"
    >
      <img
        alt="logo"
        height="70"
        src="Uberschutz-Icon.png"
        width="65"
      />
      <a
        class="navbar-brand uber-color button-footer navbar-brand"
        href="/"
      >
        <img
          alt="typo"
          src="Überschutz-typo-resize.png"
        />
      </a>
      <div
        class="collapse navbar-collapse collapse show navbar-collapse"
      >
        <ul
          class="ml-auto navbar  navbar-expand-md navbar-nav"
        >
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/"
            >
              Menu
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Connection"
            >
              Connection
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Contact+FAQ"
            >
              Contact + FAQ
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Subscription"
            >
              Subscription
            </a>
          </li>
        </ul>
      </div>
      <div
        class="btn-group btn-group-sm"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          type="button"
        >
          <img
            alt="english"
            class="clickable-flag"
            height="33"
            src="icons8-grande-bretagne-48.png"
            width="35"
          />
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <img
              alt="french"
              class="clickable-flag touched"
              data-lang="fr"
              height="35"
              src="icons8-france-96.png"
              width="35"
            />
          </div>
          <div>
            <img
              alt="english"
              class="clickable-flag"
              data-lang="en"
              height="33"
              src="icons8-grande-bretagne-48.png"
              width="35"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Testing the Header component rendering render Header not being logged in french 1`] = `
<div>
  <div>
    <div
      class="CookieConsent"
      style="align-items: baseline; background: rgb(43, 55, 59); color: white; display: flex; flex-wrap: wrap; justify-content: space-between; left: 0px; position: fixed; width: 100%; z-index: 999; height: 13%; text-align: justify; bottom: 0px;"
    >
      <div
        class=""
        style="flex: 1 0 300px; margin: 15px;"
      >
        We use cookies and similar technologies ("cookies") to provide and secure our websites, as well as to analyze the usage of our websites, in order to offer you a great user experience.
        <br />
        To learn more about our use of cookies see our Data Collect information.
        <br />
        Select "I accept" to consent to this use, "I decline" to reject this use, or "More info" to control our cookies' use.
        <a
          href="/DataInformations"
        >
          <button
            class="btn btn-primary more-info"
          >
            More info
          </button>
        </a>
      </div>
      <div
        class=""
      >
        <button
          class=""
          id="rcc-decline-button"
          style="background: rgb(193, 42, 42); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(229, 57, 53);"
        >
          I decline
        </button>
        <button
          class=""
          id="rcc-confirm-button"
          style="background: rgb(255, 212, 45); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(39, 174, 96);"
        >
          I accept
        </button>
      </div>
    </div>
    <nav
      class="navbar navbar-expand-sm uber-color navbar navbar-expand-md navbar-light"
    >
      <img
        alt="logo"
        height="70"
        src="Uberschutz-Icon.png"
        width="65"
      />
      <a
        class="navbar-brand uber-color button-footer navbar-brand"
        href="/"
      >
        <img
          alt="typo"
          src="Überschutz-typo-resize.png"
        />
      </a>
      <div
        class="collapse navbar-collapse collapse show navbar-collapse"
      >
        <ul
          class="ml-auto navbar  navbar-expand-md navbar-nav"
        >
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/"
            >
              Menu
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Connection"
            >
              Connexion
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Contact+FAQ"
            >
              Contact + FAQ
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Subscription"
            >
              Abonnements
            </a>
          </li>
        </ul>
      </div>
      <div
        class="btn-group btn-group-sm"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          type="button"
        >
          <img
            alt="french"
            class="clickable-flag touched"
            height="35"
            src="icons8-france-96.png"
            width="35"
          />
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <img
              alt="french"
              class="clickable-flag touched"
              data-lang="fr"
              height="35"
              src="icons8-france-96.png"
              width="35"
            />
          </div>
          <div>
            <img
              alt="english"
              class="clickable-flag"
              data-lang="en"
              height="33"
              src="icons8-grande-bretagne-48.png"
              width="35"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Testing the Header component rendering renders Header without crashing in any language 1`] = `
<div>
  <div>
    <div
      class="CookieConsent"
      style="align-items: baseline; background: rgb(43, 55, 59); color: white; display: flex; flex-wrap: wrap; justify-content: space-between; left: 0px; position: fixed; width: 100%; z-index: 999; height: 13%; text-align: justify; bottom: 0px;"
    >
      <div
        class=""
        style="flex: 1 0 300px; margin: 15px;"
      >
        We use cookies and similar technologies ("cookies") to provide and secure our websites, as well as to analyze the usage of our websites, in order to offer you a great user experience.
        <br />
        To learn more about our use of cookies see our Data Collect information.
        <br />
        Select "I accept" to consent to this use, "I decline" to reject this use, or "More info" to control our cookies' use.
        <a
          href="/DataInformations"
        >
          <button
            class="btn btn-primary more-info"
          >
            More info
          </button>
        </a>
      </div>
      <div
        class=""
      >
        <button
          class=""
          id="rcc-decline-button"
          style="background: rgb(193, 42, 42); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(229, 57, 53);"
        >
          I decline
        </button>
        <button
          class=""
          id="rcc-confirm-button"
          style="background: rgb(255, 212, 45); border: 0px; border-radius: 0px; box-shadow: none; color: rgb(0, 0, 0); cursor: pointer; flex: 0 0 auto; padding: 5px 10px; margin: 15px; background-color: rgb(39, 174, 96);"
        >
          I accept
        </button>
      </div>
    </div>
    <nav
      class="navbar navbar-expand-sm uber-color navbar navbar-expand-md navbar-light"
    >
      <img
        alt="logo"
        height="70"
        src="Uberschutz-Icon.png"
        width="65"
      />
      <a
        class="navbar-brand uber-color button-footer navbar-brand"
        href="/"
      >
        <img
          alt="typo"
          src="Überschutz-typo-resize.png"
        />
      </a>
      <div
        class="collapse navbar-collapse collapse show navbar-collapse"
      >
        <ul
          class="ml-auto navbar  navbar-expand-md navbar-nav"
        >
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/"
            >
              Menu
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Connection"
            >
              Connexion
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Contact+FAQ"
            >
              Contact + FAQ
            </a>
          </li>
          <li
            class="nav-item nav-item"
          >
            <a
              class="nav-link uber-color"
              href="/Subscription"
            >
              Abonnements
            </a>
          </li>
        </ul>
      </div>
      <div
        class="btn-group btn-group-sm"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-primary"
          type="button"
        >
          <img
            alt="french"
            class="clickable-flag touched"
            height="35"
            src="icons8-france-96.png"
            width="35"
          />
        </button>
        <div
          aria-hidden="true"
          class="drop btn dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <div>
            <img
              alt="french"
              class="clickable-flag touched"
              data-lang="fr"
              height="35"
              src="icons8-france-96.png"
              width="35"
            />
          </div>
          <div>
            <img
              alt="english"
              class="clickable-flag"
              data-lang="en"
              height="33"
              src="icons8-grande-bretagne-48.png"
              width="35"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;
